@@ -1,5 +1,11 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.615 2006/05/08 17:51:00 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.616 2006/05/09 12:20:07 wolf31o2 Exp $
+
+  09 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/livecdfs-update.sh:
+  Removed portion of livecdfs-update.sh that created /etc/conf.d/net as it is
+  no longer necessary and can cause possible problems with Installer-based
+  installs.
 
   08 May 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_lock.py:
   recursive directory create
